Add database retreival

--- a/ToDoList/appsettings.json
+++ b/ToDoList/appsettings.json
@@ -1,8 +1,13 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
+  //"Logging": {
+  //  "IncludeScopes": false,
+  //  "LogLevel": {
+  //    "Default": "Warning"
+  //  }
+  //}
+
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost;Port=8889;database=todolist;uid=root;pwd=root;"
     }
-  }
+  
 }
