--- a/ToDoList/ToDoList.csproj
+++ b/ToDoList/ToDoList.csproj
@@ -8,7 +8,7 @@
     <Folder Include="wwwroot\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Items\" />
-    <Folder Include="Views\Categories\" />
+    <Folder Include="Views\Category\" />
   </ItemGroup>
 
   <ItemGroup>
